tests/cases/fail/inheritance_cycle.p4
class A(B):
    ax: int

class B(A):
    bx: int
